feat: Added nurse and hospital endpoint
