# api/http/handler_hospitals_schema.go
@@ -1,0 +1,15 @@
+package http
+
+import "openhealth/internal/domain"
+
+type CreateHospitalInput struct {
+	Body struct {
+		Name string `json:"name"`
+	}
+}
+
+type CreateHospitalResponse struct {
+	Body struct {
+		Hospital domain.Hospital `json:"hospital"`
+	}
+}
