# api/http/handler_nurses_schema.go
@@ -1,0 +1,28 @@
+package http
+
+import "openhealth/internal/domain"
+
+type CreateNurseInput struct {
+	Body struct {
+		AccountID string `json:"account_id"`
+	}
+}
+
+type CreateNurseResponse struct {
+	Body struct {
+		Nurse domain.Nurse `json:"nurse"`
+	}
+}
+
+type CreateNurseToHospitalAssignmentInput struct {
+	Body struct {
+		NurseID    string `json:"nurse_id"`
+		HospitalID string `json:"hospital_id"`
+	}
+}
+
+type CreateNurseToHospitalAssignmentResponse struct {
+	Body struct {
+		Assignment domain.NurseToHospitalAssignment `json:"assignment"`
+	}
+}
