# api/http/interface.go
@@ -19,3 +19,12 @@ type DoctorSVC interface {
 	CreateDoctor(ctx context.Context, doctor domain.Doctor) error
 	AddDoctorToAccountAssignment(ctx context.Context, accountID string, doctorID string) (*domain.DoctorAssignment, error)
 }
+
+type NurseSVC interface {
+	CreateNurse(ctx context.Context, nurse domain.Nurse) error
+	AddNurseToHospitalAssignment(ctx context.Context, nurseID string, hospitalID string) (*domain.NurseToHospitalAssignment, error)
+}
+
+type HospitalSVC interface {
+	CreateHospital(ctx context.Context, hospital domain.Hospital) error
+}
